--- a/tsconfig.json
+++ b/tsconfig.json
@@ -97,6 +97,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "files": ["./index.js"],
+  "include": ["src"],
   "exclude": ["node_modules", "dist", "typings", "*.d.ts"]
 }
