--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "scripts": {
     "lint": "eslint --ignore-path .gitignore .",
-    "format": "prettier --write 'src/**/*.js'",
+    "format": "prettier --write '{src,tests}/**/*.js'",
     "tscw": "tsc-watch --onSuccess \"npm run test\"",
     "test": "uvu tests",
     "prepare": "husky install"
