--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "lint-staged": {
     "*.js": [
-      "eslint --fix",
+      "eslint --fix"
+    ],
+    "*.(js|json)": [
       "prettier --write"
     ]
   },
