--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,12 @@
     "ecmaVersion": 2020,
     "sourceType": "module"
   },
-  "rules": {}
+  "rules": {
+    "import/extensions": [
+      "error",
+      {
+        "js": "always"
+      }
+    ]
+  }
 }
