--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "hast-util-to-string": "^2.0.0",
+    "parse-numeric-range": "^1.3.0",
     "refractor": "^4.4.0",
     "unist-util-visit": "^4.1.0"
   },
